y.output
Grammar

    0 $accept: session $end

    1 session: ε
    2        | session toplevel '\n'

    3 toplevel: expr
    4         | '?'
    5         | '.'

    6 expr: NUMBER
    7     | NAME
    8     | NAME '=' expr
    9     | expr EQ expr
   10     | expr '<' expr
   11     | expr '>' expr
   12     | expr '+' expr
   13     | expr '-' expr
   14     | expr '*' expr
   15     | expr '/' expr
   16     | expr '%' expr
   17     | expr '^' expr
   18     | SQRT expr
   19     | '-' expr
   20     | '(' expr ')'


Terminals, with rules where they appear

    $end (0) 0
    '\n' (10) 2
    '%' (37) 16
    '(' (40) 20
    ')' (41) 20
    '*' (42) 14
    '+' (43) 12
    '-' (45) 13 19
    '.' (46) 5
    '/' (47) 15
    '<' (60) 10
    '=' (61) 8
    '>' (62) 11
    '?' (63) 4
    '^' (94) 17
    error (256)
    NAME <symp> (258) 7 8
    NUMBER <dval> (259) 6
    EQ (260) 9
    SQRT (261) 18
    UMINUS (262)


Nonterminals, with rules where they appear

    $accept (22)
        on left: 0
    session (23)
        on left: 1 2
        on right: 0 2
    toplevel (24)
        on left: 3 4 5
        on right: 2
    expr <dval> (25)
        on left: 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20
        on right: 3 8 9 10 11 12 13 14 15 16 17 18 19 20


State 0

    0 $accept: • session $end

    $default  reduce using rule 1 (session)

    session  go to state 1


State 1

    0 $accept: session • $end
    2 session: session • toplevel '\n'

    $end    shift, and go to state 2
    NAME    shift, and go to state 3
    NUMBER  shift, and go to state 4
    SQRT    shift, and go to state 5
    '-'     shift, and go to state 6
    '?'     shift, and go to state 7
    '.'     shift, and go to state 8
    '('     shift, and go to state 9

    toplevel  go to state 10
    expr      go to state 11


State 2

    0 $accept: session $end •

    $default  accept


State 3

    7 expr: NAME •
    8     | NAME • '=' expr

    '='  shift, and go to state 12

    $default  reduce using rule 7 (expr)


State 4

    6 expr: NUMBER •

    $default  reduce using rule 6 (expr)


State 5

   18 expr: SQRT • expr

    NAME    shift, and go to state 3
    NUMBER  shift, and go to state 4
    SQRT    shift, and go to state 5
    '-'     shift, and go to state 6
    '('     shift, and go to state 9

    expr  go to state 13


State 6

   19 expr: '-' • expr

    NAME    shift, and go to state 3
    NUMBER  shift, and go to state 4
    SQRT    shift, and go to state 5
    '-'     shift, and go to state 6
    '('     shift, and go to state 9

    expr  go to state 14


State 7

    4 toplevel: '?' •

    $default  reduce using rule 4 (toplevel)


State 8

    5 toplevel: '.' •

    $default  reduce using rule 5 (toplevel)


State 9

   20 expr: '(' • expr ')'

    NAME    shift, and go to state 3
    NUMBER  shift, and go to state 4
    SQRT    shift, and go to state 5
    '-'     shift, and go to state 6
    '('     shift, and go to state 9

    expr  go to state 15


State 10

    2 session: session toplevel • '\n'

    '\n'  shift, and go to state 16


State 11

    3 toplevel: expr •
    9 expr: expr • EQ expr
   10     | expr • '<' expr
   11     | expr • '>' expr
   12     | expr • '+' expr
   13     | expr • '-' expr
   14     | expr • '*' expr
   15     | expr • '/' expr
   16     | expr • '%' expr
   17     | expr • '^' expr

    EQ   shift, and go to state 17
    '<'  shift, and go to state 18
    '>'  shift, and go to state 19
    '-'  shift, and go to state 20
    '+'  shift, and go to state 21
    '*'  shift, and go to state 22
    '/'  shift, and go to state 23
    '%'  shift, and go to state 24
    '^'  shift, and go to state 25

    $default  reduce using rule 3 (toplevel)


State 12

    8 expr: NAME '=' • expr

    NAME    shift, and go to state 3
    NUMBER  shift, and go to state 4
    SQRT    shift, and go to state 5
    '-'     shift, and go to state 6
    '('     shift, and go to state 9

    expr  go to state 26


State 13

    9 expr: expr • EQ expr
   10     | expr • '<' expr
   11     | expr • '>' expr
   12     | expr • '+' expr
   13     | expr • '-' expr
   14     | expr • '*' expr
   15     | expr • '/' expr
   16     | expr • '%' expr
   17     | expr • '^' expr
   18     | SQRT expr •

    $default  reduce using rule 18 (expr)


State 14

    9 expr: expr • EQ expr
   10     | expr • '<' expr
   11     | expr • '>' expr
   12     | expr • '+' expr
   13     | expr • '-' expr
   14     | expr • '*' expr
   15     | expr • '/' expr
   16     | expr • '%' expr
   17     | expr • '^' expr
   19     | '-' expr •

    $default  reduce using rule 19 (expr)


State 15

    9 expr: expr • EQ expr
   10     | expr • '<' expr
   11     | expr • '>' expr
   12     | expr • '+' expr
   13     | expr • '-' expr
   14     | expr • '*' expr
   15     | expr • '/' expr
   16     | expr • '%' expr
   17     | expr • '^' expr
   20     | '(' expr • ')'

    EQ   shift, and go to state 17
    '<'  shift, and go to state 18
    '>'  shift, and go to state 19
    '-'  shift, and go to state 20
    '+'  shift, and go to state 21
    '*'  shift, and go to state 22
    '/'  shift, and go to state 23
    '%'  shift, and go to state 24
    '^'  shift, and go to state 25
    ')'  shift, and go to state 27


State 16

    2 session: session toplevel '\n' •

    $default  reduce using rule 2 (session)


State 17

    9 expr: expr EQ • expr

    NAME    shift, and go to state 3
    NUMBER  shift, and go to state 4
    SQRT    shift, and go to state 5
    '-'     shift, and go to state 6
    '('     shift, and go to state 9

    expr  go to state 28


State 18

   10 expr: expr '<' • expr

    NAME    shift, and go to state 3
    NUMBER  shift, and go to state 4
    SQRT    shift, and go to state 5
    '-'     shift, and go to state 6
    '('     shift, and go to state 9

    expr  go to state 29


State 19

   11 expr: expr '>' • expr

    NAME    shift, and go to state 3
    NUMBER  shift, and go to state 4
    SQRT    shift, and go to state 5
    '-'     shift, and go to state 6
    '('     shift, and go to state 9

    expr  go to state 30


State 20

   13 expr: expr '-' • expr

    NAME    shift, and go to state 3
    NUMBER  shift, and go to state 4
    SQRT    shift, and go to state 5
    '-'     shift, and go to state 6
    '('     shift, and go to state 9

    expr  go to state 31


State 21

   12 expr: expr '+' • expr

    NAME    shift, and go to state 3
    NUMBER  shift, and go to state 4
    SQRT    shift, and go to state 5
    '-'     shift, and go to state 6
    '('     shift, and go to state 9

    expr  go to state 32


State 22

   14 expr: expr '*' • expr

    NAME    shift, and go to state 3
    NUMBER  shift, and go to state 4
    SQRT    shift, and go to state 5
    '-'     shift, and go to state 6
    '('     shift, and go to state 9

    expr  go to state 33


State 23

   15 expr: expr '/' • expr

    NAME    shift, and go to state 3
    NUMBER  shift, and go to state 4
    SQRT    shift, and go to state 5
    '-'     shift, and go to state 6
    '('     shift, and go to state 9

    expr  go to state 34


State 24

   16 expr: expr '%' • expr

    NAME    shift, and go to state 3
    NUMBER  shift, and go to state 4
    SQRT    shift, and go to state 5
    '-'     shift, and go to state 6
    '('     shift, and go to state 9

    expr  go to state 35


State 25

   17 expr: expr '^' • expr

    NAME    shift, and go to state 3
    NUMBER  shift, and go to state 4
    SQRT    shift, and go to state 5
    '-'     shift, and go to state 6
    '('     shift, and go to state 9

    expr  go to state 36


State 26

    8 expr: NAME '=' expr •
    9     | expr • EQ expr
   10     | expr • '<' expr
   11     | expr • '>' expr
   12     | expr • '+' expr
   13     | expr • '-' expr
   14     | expr • '*' expr
   15     | expr • '/' expr
   16     | expr • '%' expr
   17     | expr • '^' expr

    EQ   shift, and go to state 17
    '<'  shift, and go to state 18
    '>'  shift, and go to state 19
    '-'  shift, and go to state 20
    '+'  shift, and go to state 21
    '*'  shift, and go to state 22
    '/'  shift, and go to state 23
    '%'  shift, and go to state 24
    '^'  shift, and go to state 25

    $default  reduce using rule 8 (expr)


State 27

   20 expr: '(' expr ')' •

    $default  reduce using rule 20 (expr)


State 28

    9 expr: expr • EQ expr
    9     | expr EQ expr •
   10     | expr • '<' expr
   11     | expr • '>' expr
   12     | expr • '+' expr
   13     | expr • '-' expr
   14     | expr • '*' expr
   15     | expr • '/' expr
   16     | expr • '%' expr
   17     | expr • '^' expr

    EQ   shift, and go to state 17
    '<'  shift, and go to state 18
    '>'  shift, and go to state 19
    '-'  shift, and go to state 20
    '+'  shift, and go to state 21
    '*'  shift, and go to state 22
    '/'  shift, and go to state 23
    '%'  shift, and go to state 24
    '^'  shift, and go to state 25

    $default  reduce using rule 9 (expr)


State 29

    9 expr: expr • EQ expr
   10     | expr • '<' expr
   10     | expr '<' expr •
   11     | expr • '>' expr
   12     | expr • '+' expr
   13     | expr • '-' expr
   14     | expr • '*' expr
   15     | expr • '/' expr
   16     | expr • '%' expr
   17     | expr • '^' expr

    EQ   shift, and go to state 17
    '<'  shift, and go to state 18
    '>'  shift, and go to state 19
    '-'  shift, and go to state 20
    '+'  shift, and go to state 21
    '*'  shift, and go to state 22
    '/'  shift, and go to state 23
    '%'  shift, and go to state 24
    '^'  shift, and go to state 25

    $default  reduce using rule 10 (expr)


State 30

    9 expr: expr • EQ expr
   10     | expr • '<' expr
   11     | expr • '>' expr
   11     | expr '>' expr •
   12     | expr • '+' expr
   13     | expr • '-' expr
   14     | expr • '*' expr
   15     | expr • '/' expr
   16     | expr • '%' expr
   17     | expr • '^' expr

    EQ   shift, and go to state 17
    '<'  shift, and go to state 18
    '>'  shift, and go to state 19
    '-'  shift, and go to state 20
    '+'  shift, and go to state 21
    '*'  shift, and go to state 22
    '/'  shift, and go to state 23
    '%'  shift, and go to state 24
    '^'  shift, and go to state 25

    $default  reduce using rule 11 (expr)


State 31

    9 expr: expr • EQ expr
   10     | expr • '<' expr
   11     | expr • '>' expr
   12     | expr • '+' expr
   13     | expr • '-' expr
   13     | expr '-' expr •
   14     | expr • '*' expr
   15     | expr • '/' expr
   16     | expr • '%' expr
   17     | expr • '^' expr

    '*'  shift, and go to state 22
    '/'  shift, and go to state 23
    '%'  shift, and go to state 24
    '^'  shift, and go to state 25

    $default  reduce using rule 13 (expr)


State 32

    9 expr: expr • EQ expr
   10     | expr • '<' expr
   11     | expr • '>' expr
   12     | expr • '+' expr
   12     | expr '+' expr •
   13     | expr • '-' expr
   14     | expr • '*' expr
   15     | expr • '/' expr
   16     | expr • '%' expr
   17     | expr • '^' expr

    '*'  shift, and go to state 22
    '/'  shift, and go to state 23
    '%'  shift, and go to state 24
    '^'  shift, and go to state 25

    $default  reduce using rule 12 (expr)


State 33

    9 expr: expr • EQ expr
   10     | expr • '<' expr
   11     | expr • '>' expr
   12     | expr • '+' expr
   13     | expr • '-' expr
   14     | expr • '*' expr
   14     | expr '*' expr •
   15     | expr • '/' expr
   16     | expr • '%' expr
   17     | expr • '^' expr

    '^'  shift, and go to state 25

    $default  reduce using rule 14 (expr)


State 34

    9 expr: expr • EQ expr
   10     | expr • '<' expr
   11     | expr • '>' expr
   12     | expr • '+' expr
   13     | expr • '-' expr
   14     | expr • '*' expr
   15     | expr • '/' expr
   15     | expr '/' expr •
   16     | expr • '%' expr
   17     | expr • '^' expr

    '^'  shift, and go to state 25

    $default  reduce using rule 15 (expr)


State 35

    9 expr: expr • EQ expr
   10     | expr • '<' expr
   11     | expr • '>' expr
   12     | expr • '+' expr
   13     | expr • '-' expr
   14     | expr • '*' expr
   15     | expr • '/' expr
   16     | expr • '%' expr
   16     | expr '%' expr •
   17     | expr • '^' expr

    '^'  shift, and go to state 25

    $default  reduce using rule 16 (expr)


State 36

    9 expr: expr • EQ expr
   10     | expr • '<' expr
   11     | expr • '>' expr
   12     | expr • '+' expr
   13     | expr • '-' expr
   14     | expr • '*' expr
   15     | expr • '/' expr
   16     | expr • '%' expr
   17     | expr • '^' expr
   17     | expr '^' expr •

    $default  reduce using rule 17 (expr)
